fixed version derp

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "woopra-tracker",
-  "version": "5.0.11",
+  "version": "5.0.11-a",
   "homepage": "https://github.com/intellix/js-client-tracker",
   "authors": [
     "Billy Vong <billy@woopra.com>"
